Added Realm to Gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'io.realm.kotlin'
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
@@ -47,7 +48,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'io.realm.kotlin:library-base:1.8.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
